# portrm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ai-docs.json  ai-training.md  full-llms.txt  install.sh  llms.txt  seo.md  seo.txt  test.sh  test_conflict.py  test_cross_platform.py
.github/workflows/: ci.yml  release.yml
Formula/: portrm.rb
homebrew/: README.md
npm/: README.md  install.js  package.json
pip/: .gitignore  LICENSE  README.md  install.py  pyproject.toml
pip/src/portrm/: __init__.py  conflict.py  update.py
scoop/: portrm.json
scripts/: bump-version.sh  update-formula.py
seo/: ai-docs.json  llms.txt  seo.md  seo.txt
src/: errors.rs  main.rs  resolver.rs
src/ci/: mod.rs
src/classifier/: mod.rs
src/cli/: commands.rs  interactive.rs  mod.rs  output.rs
src/completions/: mod.rs
src/config/: mod.rs
src/conflict/: mod.rs
src/crash/: mod.rs
src/docker/: mod.rs
src/doctor/: mod.rs
src/engine/: mod.rs
src/grouping/: mod.rs
src/history/: mod.rs
src/inspector/: mod.rs
src/log/: mod.rs
src/models/: mod.rs  port_info.rs  process_info.rs  service.rs
src/platform/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/plugin/: mod.rs
src/preflight/: mod.rs
src/project/: mod.rs
src/registry/: mod.rs
src/restart/: mod.rs
src/scanner/: mod.rs
src/stack/: mod.rs
src/status/: mod.rs
src/update/: mod.rs
src/watch/: mod.rs
tests/: test.sh  test_conflict.py  test_cross_platform.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  portrm-1.0.0.vsix  portrm-1.0.1.vsix  portrm-cli-1.0.1.vsix  portrm-cli-1.0.2.vsix
vscode-extension/src/: commands.ts  extension.ts  installer.ts  treeProvider.ts  utils.ts
