[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portrm"
version = "2.2.4"
description = "portrm - blazing-fast, cross-platform CLI to inspect ports, kill processes, and recover broken dev environments."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "abhishekayu", email = "abhishekayu@users.noreply.github.com"},
]
keywords = [
    "port",
    "kill-port",
    "port-conflict",
    "port-scanner",
    "port-kill",
    "port-management",
    "developer-tools",
    "cli",
    "devserver",
    "process",
    "process-manager",
    "debug",
    "dev-environment",
    "rust",
    "cross-platform",
    "docker",
    "devops",
    "terminal",
    "tui",
    "lsof",
    "netstat",
    "fkill",
    "kill-process",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://portrm.dev"
Repository = "https://github.com/abhishekayu/portrm"
Issues = "https://github.com/abhishekayu/portrm/issues"
Documentation = "https://github.com/abhishekayu/portrm#readme"
Changelog = "https://github.com/abhishekayu/portrm/releases"
"VS Code Extension" = "https://marketplace.visualstudio.com/items?itemName=abhishekayu.portrm-cli"

[project.scripts]
ptrm = "portrm:main"
portrm = "portrm:main"

[tool.setuptools.packages.find]
where = ["src"]
